--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,13 @@
     <string name="apiUrl">https://api.themoviedb.org/3/movie/</string>
     <string name="apiKey">18f552217e447f369638f70fa4f06a20</string>
     <string name="popular">popular</string>
+    <string name="selecciona_opcion">si soy</string>
+
+    <string-array name="opciones_spinner">
+        <item>pendejo</item>
+        <item>miau</item>
+        <item>homero</item>
+        <item>me hice caca</item>
+    </string-array>
 
 </resources>
